@@ -1,10 +1,11 @@
 package net.geant.nmaas.portal.api.user;
 
-import net.geant.nmaas.portal.domain.PasswordChange;
-import net.geant.nmaas.portal.domain.UserRequest;
-import net.geant.nmaas.portal.domain.UserRoleView;
-import net.geant.nmaas.portal.domain.UserView;
-import net.geant.nmaas.portal.domain.UserViewMinimal;
+import net.geant.nmaas.api.dto.PasswordChange;
+import net.geant.nmaas.api.dto.users.RoleDto;
+import net.geant.nmaas.api.dto.users.UserRequest;
+import net.geant.nmaas.api.dto.users.UserRoleDto;
+import net.geant.nmaas.api.dto.users.UserView;
+import net.geant.nmaas.api.dto.users.UserViewMinimal;
 import net.geant.nmaas.portal.api.exceptions.MissingElementException;
 import net.geant.nmaas.portal.api.exceptions.ProcessingException;
 import net.geant.nmaas.portal.api.security.JWTTokenService;
@@ -99,11 +100,11 @@ class UsersControllerTest {
 
     @Test
     void shouldGetUser() {
-        when(userService.findById(userList.get(0).getId())).thenReturn(Optional.of(userList.get(0)));
-        when(userLoginService.getUserFirstAndLastSuccessfulLoginDate(userList.get(0))).thenReturn(Optional.empty());
-        UserRoleView userRole = modelMapper.map(userList.get(0).getRoles().get(0), UserRoleView.class);
-        UserView user = (UserView) usersController.getUser(userList.get(0).getId(), principal);
-        assertThat("Wrong username", user.getUsername().equals(userList.get(0).getUsername()));
+        when(userService.findById(userList.getFirst().getId())).thenReturn(Optional.of(userList.getFirst()));
+        when(userLoginService.getUserFirstAndLastSuccessfulLoginDate(userList.getFirst())).thenReturn(Optional.empty());
+        UserRoleDto userRole = modelMapper.map(userList.getFirst().getRoles().getFirst(), UserRoleDto.class);
+        UserView user = (UserView) usersController.getUser(userList.getFirst().getId(), principal);
+        assertThat("Wrong username", user.getUsername().equals(userList.getFirst().getUsername()));
         assertThat("Wrong role", user.getRoles().iterator().next().getRole().equals(userRole.getRole()));
     }
 
@@ -118,12 +119,12 @@ class UsersControllerTest {
 
     @Test
     void shouldUpdateUser() {
-        when(principal.getName()).thenReturn(userList.get(0).getUsername());
-        UserRequest userRequest = new UserRequest(userList.get(0).getId(), userList.get(0).getUsername(), userList.get(0).getPassword());
+        when(principal.getName()).thenReturn(userList.getFirst().getUsername());
+        UserRequest userRequest = new UserRequest(userList.getFirst().getId(), userList.getFirst().getUsername(), userList.getFirst().getPassword());
         userRequest.setEmail("test@nmaas.net");
         userRequest.setFirstname("test");
-        usersController.updateUser(userList.get(0).getId(), userRequest, principal);
-        verify(userService, times(1)).update(userList.get(0));
+        usersController.updateUser(userList.getFirst().getId(), userRequest, principal);
+        verify(userService, times(1)).update(userList.getFirst());
     }
 
     @Test
@@ -140,7 +141,7 @@ class UsersControllerTest {
     void shouldNotUpdateWithNullId() {
         assertThrows(MissingElementException.class, () -> {
             Long userId = null;
-            UserRequest userRequest = new UserRequest(userId, userList.get(0).getUsername(), userList.get(0).getPassword());
+            UserRequest userRequest = new UserRequest(userId, userList.getFirst().getUsername(), userList.getFirst().getPassword());
             when(userService.findById(userId)).thenReturn(Optional.empty());
             usersController.updateUser(userId, userRequest, principal);
         });
@@ -156,31 +157,31 @@ class UsersControllerTest {
 
     @Test
     void shouldNotUpdateUserWithNonUniqueEmail() {
-        when(principal.getName()).thenReturn(userList.get(0).getUsername());
+        when(principal.getName()).thenReturn(userList.getFirst().getUsername());
         assertThrows(ProcessingException.class, () -> {
             when(userService.existsByEmail(anyString())).thenReturn(true);
-            UserRequest userRequest = new UserRequest(userList.get(0).getId(), userList.get(0).getUsername(), userList.get(0).getPassword());
+            UserRequest userRequest = new UserRequest(userList.getFirst().getId(), userList.getFirst().getUsername(), userList.get(0).getPassword());
             userRequest.setEmail("test@nmaas.net");
             userRequest.setFirstname("test");
-            usersController.updateUser(userList.get(0).getId(), userRequest, principal);
-            verify(userService, times(2)).update(userList.get(0));
+            usersController.updateUser(userList.getFirst().getId(), userRequest, principal);
+            verify(userService, times(2)).update(userList.getFirst());
         });
     }
 
     @Test
     void shouldUpdateUserWithNullEmail() {
-        when(principal.getName()).thenReturn(userList.get(0).getUsername());
-        UserRequest userRequest = new UserRequest(userList.get(0).getId(), userList.get(0).getUsername(), userList.get(0).getPassword());
+        when(principal.getName()).thenReturn(userList.getFirst().getUsername());
+        UserRequest userRequest = new UserRequest(userList.getFirst().getId(), userList.getFirst().getUsername(), userList.get(0).getPassword());
         userRequest.setEmail(null);
         userRequest.setFirstname("test");
-        usersController.updateUser(userList.get(0).getId(), userRequest, principal);
-        verify(userService, times(1)).update(userList.get(0));
+        usersController.updateUser(userList.getFirst().getId(), userRequest, principal);
+        verify(userService, times(1)).update(userList.getFirst());
     }
 
     @Test
     void shouldGetUserRoles() {
-        Set<UserRoleView> result = usersController.getUserRoles(userList.get(0).getId());
-        UserRoleView userRole = modelMapper.map(userList.get(0).getRoles().get(0), UserRoleView.class);
+        Set<UserRoleDto> result = usersController.getUserRoles(userList.getFirst().getId());
+        UserRoleDto userRole = modelMapper.map(userList.getFirst().getRoles().getFirst(), UserRoleDto.class);
         assertThat("Wrong roles set", result.iterator().next().getRole().equals(userRole.getRole()));
     }
 
@@ -189,32 +190,32 @@ class UsersControllerTest {
         assertThrows(MissingElementException.class, () -> {
             Long userId = 5L;
             when(userService.findById(userId)).thenReturn(Optional.empty());
-            Set<UserRoleView> result = usersController.getUserRoles(userId);
+            Set<UserRoleDto> result = usersController.getUserRoles(userId);
         });
     }
 
     @Test
     void shouldRemoveUserRoleWithGlobalDomainAndAddGuestRole() {
-        UserRoleView userRole = new UserRoleView();
-        userRole.setRole(Role.ROLE_OPERATOR);
-        usersController.removeUserRole(userList.get(0).getId(), userRole, principal);
-        verify(domainService, times(1)).removeMemberRole(GLOBAL_DOMAIN.getId(), userList.get(0).getId(), Role.ROLE_OPERATOR);
-        verify(domainService, times(1)).addGlobalGuestUserRoleIfMissing(userList.get(0).getId());
+        UserRoleDto userRole = new UserRoleDto();
+        userRole.setRole(RoleDto.ROLE_OPERATOR);
+        usersController.removeUserRole(userList.getFirst().getId(), userRole, principal);
+        verify(domainService, times(1)).removeMemberRole(GLOBAL_DOMAIN.getId(), userList.getFirst().getId(), Role.ROLE_OPERATOR);
+        verify(domainService, times(1)).addGlobalGuestUserRoleIfMissing(userList.getFirst().getId());
     }
 
     @Test
     void shouldRemoveUserRoleWithNonGlobalDomain() {
-        UserRoleView userRole = new UserRoleView();
-        userRole.setRole(Role.ROLE_OPERATOR);
+        UserRoleDto userRole = new UserRoleDto();
+        userRole.setRole(RoleDto.ROLE_OPERATOR);
         userRole.setDomainId(DOMAIN.getId());
-        usersController.removeUserRole(userList.get(0).getId(), userRole, principal);
-        verify(domainService, times(1)).removeMemberRole(DOMAIN.getId(), userList.get(0).getId(), Role.ROLE_OPERATOR);
+        usersController.removeUserRole(userList.getFirst().getId(), userRole, principal);
+        verify(domainService, times(1)).removeMemberRole(DOMAIN.getId(), userList.getFirst().getId(), Role.ROLE_OPERATOR);
     }
 
     @Test
     void shouldNotRemoveUserRoleWithNullRequest() {
         MissingElementException me = assertThrows(MissingElementException.class, () -> {
-            usersController.removeUserRole(userList.get(0).getId(), null, principal);
+            usersController.removeUserRole(userList.getFirst().getId(), null, principal);
         });
 
         assertEquals("userRole is null", me.getMessage());
@@ -222,10 +223,10 @@ class UsersControllerTest {
 
     @Test
     void shouldNotRemoveUserRoleWithNullUserRole() {
-        UserRoleView ur = new UserRoleView();
+        UserRoleDto ur = new UserRoleDto();
         ur.setRole(null);
         MissingElementException me = assertThrows(MissingElementException.class, () -> {
-            usersController.removeUserRole(userList.get(0).getId(), ur, principal);
+            usersController.removeUserRole(userList.getFirst().getId(), ur, principal);
         });
 
         assertEquals("Missing role", me.getMessage());
@@ -235,8 +236,8 @@ class UsersControllerTest {
     void shouldNotRemoveUserRoleWhenUserIdIsNull() {
         assertThrows(MissingElementException.class, () -> {
             Long userId = null;
-            UserRoleView userRole = new UserRoleView();
-            userRole.setRole(Role.ROLE_OPERATOR);
+            UserRoleDto userRole = new UserRoleDto();
+            userRole.setRole(RoleDto.ROLE_OPERATOR);
             when(userService.findById(userId)).thenReturn(Optional.empty());
             usersController.removeUserRole(userId, userRole, principal);
         });
@@ -245,40 +246,40 @@ class UsersControllerTest {
     @Test
     void shouldNotRemoveUserRoleWhenUserRoleIsNull() {
         assertThrows(MissingElementException.class, () -> {
-            UserRoleView userRole = null;
-            usersController.removeUserRole(userList.get(0).getId(), userRole, principal);
+            UserRoleDto userRole = null;
+            usersController.removeUserRole(userList.getFirst().getId(), userRole, principal);
         });
     }
 
     @Test
     void shouldNotRemoveUserRoleWithoutDomain() {
         assertThrows(MissingElementException.class, () -> {
-            UserRoleView userRole = new UserRoleView();
-            userRole.setRole(Role.ROLE_OPERATOR);
+            UserRoleDto userRole = new UserRoleDto();
+            userRole.setRole(RoleDto.ROLE_OPERATOR);
             when(domainService.getGlobalDomain()).thenReturn(Optional.empty());
-            usersController.removeUserRole(userList.get(0).getId(), userRole, principal);
+            usersController.removeUserRole(userList.getFirst().getId(), userRole, principal);
         });
     }
 
     @Test
     void shouldChangePassword() {
-        when(principal.getName()).thenReturn(userList.get(0).getUsername());
-        when(userService.findByUsername(userList.get(0).getUsername())).thenReturn(Optional.of(userList.get(0)));
-        PasswordChange passwordChange = new PasswordChange(userList.get(0).getPassword(), "test1234");
-        when(passwordEncoder.matches(userList.get(0).getPassword(), passwordChange.getPassword())).thenReturn(true);
+        when(principal.getName()).thenReturn(userList.getFirst().getUsername());
+        when(userService.findByUsername(userList.getFirst().getUsername())).thenReturn(Optional.of(userList.get(0)));
+        PasswordChange passwordChange = new PasswordChange(userList.getFirst().getPassword(), "test1234");
+        when(passwordEncoder.matches(userList.getFirst().getPassword(), passwordChange.password())).thenReturn(true);
         usersController.changePassword(principal, passwordChange);
-        verify(userService, times(1)).update(userList.get(0));
+        verify(userService, times(1)).update(userList.getFirst());
     }
 
     @Test
     void shouldNotChangePasswordOnPreviousPasswordMismatch() {
         assertThrows(ProcessingException.class, () -> {
-            when(principal.getName()).thenReturn(userList.get(0).getUsername());
-            when(userService.findByUsername(userList.get(0).getUsername())).thenReturn(Optional.of(userList.get(0)));
+            when(principal.getName()).thenReturn(userList.getFirst().getUsername());
+            when(userService.findByUsername(userList.getFirst().getUsername())).thenReturn(Optional.of(userList.get(0)));
             PasswordChange passwordChange = new PasswordChange("wrongpass", "test1234");
-            when(passwordEncoder.matches(userList.get(0).getPassword(), passwordChange.getPassword())).thenReturn(false);
+            when(passwordEncoder.matches(userList.getFirst().getPassword(), passwordChange.password())).thenReturn(false);
             usersController.changePassword(principal, passwordChange);
-            verify(userService, times(1)).update(userList.get(0));
+            verify(userService, times(1)).update(userList.getFirst());
         });
     }
 
@@ -294,9 +295,9 @@ class UsersControllerTest {
     void shouldGetDomainUser() {
         Long domainId = 1L;
         Long userId = 1L;
-        when(domainService.getMember(domainId, userId)).thenReturn(userList.get(0));
+        when(domainService.getMember(domainId, userId)).thenReturn(userList.getFirst());
         UserView user = usersController.getDomainUser(domainId, userId);
-        assertThat("User mismatch", user.getUsername().equals(userList.get(0).getUsername()));
+        assertThat("User mismatch", user.getUsername().equals(userList.getFirst().getUsername()));
     }
 
     @Test
@@ -321,35 +322,35 @@ class UsersControllerTest {
 
     @Test
     void shouldRemoveDomainUser() {
-        usersController.removeDomainUser(DOMAIN.getId(), userList.get(0).getId());
-        verify(domainService, times(1)).removeMember(DOMAIN.getId(), userList.get(0).getId());
+        usersController.removeDomainUser(DOMAIN.getId(), userList.getFirst().getId());
+        verify(domainService, times(1)).removeMember(DOMAIN.getId(), userList.getFirst().getId());
     }
 
     @Test
     void shouldGetUserDomainRoles() {
-        Set<Role> roles = usersController.getUserRoles(DOMAIN.getId(), userList.get(0).getId());
-        verify(domainService, times(1)).getMemberRoles(DOMAIN.getId(), userList.get(0).getId());
+        Set<Role> roles = usersController.getUserRoles(DOMAIN.getId(), userList.getFirst().getId());
+        verify(domainService, times(1)).getMemberRoles(DOMAIN.getId(), userList.getFirst().getId());
     }
 
     @Test
     void shouldAddUserRoleToCustomDomain() throws SchedulerException {
-        UserRoleView userRole = new UserRoleView();
+        UserRoleDto userRole = new UserRoleDto();
         userRole.setDomainId(DOMAIN.getId());
-        userRole.setRole(Role.ROLE_USER);
+        userRole.setRole(RoleDto.ROLE_USER);
 
-        usersController.addUserRole(DOMAIN.getId(), userList.get(0).getId(), userRole, principal);
-        verify(domainService, times(1)).addMemberRole(DOMAIN.getId(), userList.get(0).getId(), userRole.getRole());
+        usersController.addUserRole(DOMAIN.getId(), userList.getFirst().getId(), userRole, principal);
+        verify(domainService, times(1)).addMemberRole(DOMAIN.getId(), userList.getFirst().getId(), Role.valueOf(userRole.getRole().name()));
         verify(eventPublisher, times(1)).publishEvent(any());
     }
 
     @Test
     void shouldAddUserRoleToGlobalDomain() {
-        UserRoleView userRole = new UserRoleView();
+        UserRoleDto userRole = new UserRoleDto();
         userRole.setDomainId(GLOBAL_DOMAIN.getId());
-        userRole.setRole(Role.ROLE_OPERATOR);
+        userRole.setRole(RoleDto.ROLE_OPERATOR);
         when(domainService.findDomain(GLOBAL_DOMAIN.getId())).thenReturn(Optional.of(GLOBAL_DOMAIN));
-        usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.get(0).getId(), userRole, principal);
-        verify(domainService, times(1)).addMemberRole(GLOBAL_DOMAIN.getId(), userList.get(0).getId(), userRole.getRole());
+        usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.getFirst().getId(), userRole, principal);
+        verify(domainService, times(1)).addMemberRole(GLOBAL_DOMAIN.getId(), userList.getFirst().getId(), Role.valueOf(userRole.getRole().name()));
 
         verifyNoInteractions(eventPublisher);
     }
@@ -357,58 +358,56 @@ class UsersControllerTest {
     @Test
     void shouldNotAddUserRoleWithNullRole() {
         assertThrows(MissingElementException.class, () -> {
-            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.get(0).getId(), null, principal);
+            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.getFirst().getId(), null, principal);
         });
     }
 
     @Test
     void shouldNotAddUserRoleWithNullUserRole() {
         assertThrows(MissingElementException.class, () -> {
-            UserRoleView userRole = new UserRoleView();
+            UserRoleDto userRole = new UserRoleDto();
             userRole.setRole(null);
-            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.get(0).getId(), userRole, principal);
+            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.getFirst().getId(), userRole, principal);
         });
     }
 
     @Test
     void shouldNotAddGlobalUserRoleInNotGlobalDomain() {
         assertThrows(ProcessingException.class, () -> {
-            UserRoleView userRole = new UserRoleView();
+            UserRoleDto userRole = new UserRoleDto();
             userRole.setDomainId(DOMAIN.getId());
-            userRole.setRole(Role.ROLE_OPERATOR);
+            userRole.setRole(RoleDto.ROLE_OPERATOR);
             when(domainService.findDomain(GLOBAL_DOMAIN.getId())).thenReturn(Optional.of(GLOBAL_DOMAIN));
-            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.get(0).getId(), userRole, principal);
+            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.getFirst().getId(), userRole, principal);
         });
     }
 
     @Test
     void shouldNotAddNonGlobalRoleToGlobalDomain() {
         assertThrows(ProcessingException.class, () -> {
-            UserRoleView userRole = new UserRoleView();
+            UserRoleDto userRole = new UserRoleDto();
             userRole.setDomainId(GLOBAL_DOMAIN.getId());
-            userRole.setRole(Role.ROLE_DOMAIN_ADMIN);
+            userRole.setRole(RoleDto.ROLE_DOMAIN_ADMIN);
             when(domainService.findDomain(GLOBAL_DOMAIN.getId())).thenReturn(Optional.of(GLOBAL_DOMAIN));
-            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.get(0).getId(), userRole, principal);
+            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.getFirst().getId(), userRole, principal);
         });
     }
 
     @Test
     void shouldNotAddGlobalRoleToCustomDomain() {
         assertThrows(ProcessingException.class, () -> {
-            UserRoleView userRole = new UserRoleView();
+            UserRoleDto userRole = new UserRoleDto();
             userRole.setDomainId(DOMAIN.getId());
-            userRole.setRole(Role.ROLE_SYSTEM_ADMIN);
-            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.get(0).getId(), userRole, principal);
+            userRole.setRole(RoleDto.ROLE_SYSTEM_ADMIN);
+            usersController.addUserRole(GLOBAL_DOMAIN.getId(), userList.getFirst().getId(), userRole, principal);
         });
     }
 
     @Test
     void shouldRemoveUserRole() {
         String userRole = "ROLE_SYSTEM_ADMIN";
-
-        usersController.removeUserRole(DOMAIN.getId(), userList.get(0).getId(), userRole, principal);
-        verify(domainService, times(1)).removeMemberRole(DOMAIN.getId(), userList.get(0).getId(), Role.ROLE_SYSTEM_ADMIN);
-
+        usersController.removeUserRole(DOMAIN.getId(), userList.getFirst().getId(), userRole, principal);
+        verify(domainService, times(1)).removeMemberRole(DOMAIN.getId(), userList.getFirst().getId(), Role.ROLE_SYSTEM_ADMIN);
         verify(eventPublisher, times(1)).publishEvent(any());
     }
 
@@ -416,21 +415,21 @@ class UsersControllerTest {
     void shouldNotConvertIncorrectStringWhenRemovingUserRole() {
         assertThrows(MissingElementException.class, () -> {
             String userRole = "ROLE_WRONG";
-            usersController.removeUserRole(DOMAIN.getId(), userList.get(0).getId(), userRole, principal);
+            usersController.removeUserRole(DOMAIN.getId(), userList.getFirst().getId(), userRole, principal);
         });
     }
 
     @Test
     void shouldSetEnabledFlag() {
-        usersController.setEnabledFlag(userList.get(0).getId(), true, principal);
-        verify(userService, times(1)).setEnabledFlag(userList.get(0).getId(), true);
+        usersController.setEnabledFlag(userList.getFirst().getId(), true, principal);
+        verify(userService, times(1)).setEnabledFlag(userList.getFirst().getId(), true);
         verify(eventPublisher, times(1)).publishEvent(any());
     }
 
     @Test
     void shouldSetDisabledFlag() {
-        usersController.setEnabledFlag(userList.get(0).getId(), false, principal);
-        verify(userService, times(1)).setEnabledFlag(userList.get(0).getId(), false);
+        usersController.setEnabledFlag(userList.getFirst().getId(), false, principal);
+        verify(userService, times(1)).setEnabledFlag(userList.getFirst().getId(), false);
         verify(eventPublisher, times(1)).publishEvent(any());
     }
 
@@ -438,7 +437,7 @@ class UsersControllerTest {
     void shouldDeleteUser() {
         User tester = userList.getFirst();
         tester.setRoles(new ArrayList<>());
-        when(this.instanceService.findAllByOwner(tester.getId())).thenReturn(new ArrayList<>());
+        when(instanceService.findAllByOwner(tester.getId())).thenReturn(new ArrayList<>());
         usersController.deleteUser(tester.getId());
         verify(userService, times(1)).deleteById(tester.getId());
     }
